force-app/main/default/objects/OutreachSourceCode/OutreachSourceCode.object-meta.xml
<CustomObject>
</CustomObject>