force-app/main/default/objects/OutreachSourceCode/fields/FQS_Channel_Segment__c.field-meta.xml
<CustomField>
    <fullName>FQS_Channel_Segment__c</fullName>
    <description>Calculated channel segment grouping derived from Message Channel. Organic: Organic Web, Physical, Social Organic, Share Partner. Paid Digital: Digital Paid, Social Paid. Owned or Acquired Lists: Email, Direct Mail, SMS, Telemarketing. Blank when Message Channel is not set.</description>
    <formula>IF(ISPICKVAL(MessageChannel, "Organic Web") || ISPICKVAL(MessageChannel, "Physical") || ISPICKVAL(MessageChannel, "Social Organic") || ISPICKVAL(MessageChannel, "Share Partner"), "Organic",
IF(ISPICKVAL(MessageChannel, "Digital Paid") || ISPICKVAL(MessageChannel, "Social Paid"), "Paid Digital",
IF(ISPICKVAL(MessageChannel, "Email") || ISPICKVAL(MessageChannel, "Direct Mail") || ISPICKVAL(MessageChannel, "SMS") || ISPICKVAL(MessageChannel, "Telemarketing"), "Owned or Acquired Lists",
"")))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Channel Segment</label>
    <type>Text</type>
</CustomField>