force-app/main/default/objects/OutreachSourceCode/fields/FQS_Message_Channel_Segment__c.field-meta.xml
<CustomField>
    <fullName>FQS_Message_Channel_Segment__c</fullName>
    <description>Formula field reading MessageChannel. Segments: Organic (Organic Web, Physical, Social Organic, Share Partner); Paid Digital (Digital Paid, Social Paid); Owned or Acquired Lists (Email, Direct Mail, SMS, Telemarketing). Not writable.</description>
    <formula>IF(ISPICKVAL(MessageChannel, &quot;Organic Web&quot;) || ISPICKVAL(MessageChannel, &quot;Physical&quot;) || ISPICKVAL(MessageChannel, &quot;Social Organic&quot;) || ISPICKVAL(MessageChannel, &quot;Share Partner&quot;), &quot;Organic&quot;,
IF(ISPICKVAL(MessageChannel, &quot;Digital Paid&quot;) || ISPICKVAL(MessageChannel, &quot;Social Paid&quot;), &quot;Paid Digital&quot;,
IF(ISPICKVAL(MessageChannel, &quot;Email&quot;) || ISPICKVAL(MessageChannel, &quot;Direct Mail&quot;) || ISPICKVAL(MessageChannel, &quot;SMS&quot;) || ISPICKVAL(MessageChannel, &quot;Telemarketing&quot;), &quot;Owned or Acquired Lists&quot;,
&quot;&quot;)))</formula>
    <inlineHelpText>Set automatically. Rolls up Message Channel into three planning buckets — Organic, Paid Digital, or Owned or Acquired Lists — used by list views and channel-mix reports.</inlineHelpText>
    <label>Message Channel Segment</label>
    <type>Text</type>
</CustomField>