force-app/main/default/objects/OutreachSourceCode/fields/FQS_Platform__c.field-meta.xml
<CustomField>
    <fullName>FQS_Platform__c</fullName>
    <description>Fundraising Quick Start: the specific platform or sender for this outreach tactic. Equivalent to utm_source. Used alongside Message Channel (utm_medium) and Campaign Short Name (utm_campaign) to build fully attributed source codes and UTM links.</description>
    <inlineHelpText>The specific platform or sender for this source code — equivalent to utm_source in web analytics. Use with Message Channel (utm_medium) to fully describe the tactic: e.g. Message Channel = Social Paid + Platform = Facebook.</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>facebook</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>instagram</fullName>
                <label>Instagram</label>
            </value>
            <value>
                <fullName>linkedin</fullName>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>x_twitter</fullName>
                <label>X (Twitter)</label>
            </value>
            <value>
                <fullName>youtube</fullName>
                <label>YouTube</label>
            </value>
            <value>
                <fullName>google_ads</fullName>
                <label>Google Ads</label>
            </value>
            <value>
                <fullName>microsoft_ads</fullName>
                <label>Microsoft Ads</label>
            </value>
            <value>
                <fullName>mailchimp</fullName>
                <label>Mailchimp</label>
            </value>
            <value>
                <fullName>marketing_cloud</fullName>
                <label>Marketing Cloud</label>
            </value>
            <value>
                <fullName>constant_contact</fullName>
                <label>Constant Contact</label>
            </value>
            <value>
                <fullName>other_email</fullName>
                <label>Other Email Platform</label>
            </value>
            <value>
                <fullName>direct_mail_house</fullName>
                <label>Direct Mail House</label>
            </value>
            <value>
                <fullName>sms_platform</fullName>
                <label>SMS Platform</label>
            </value>
            <value>
                <fullName>phone_call_center</fullName>
                <label>Phone / Call Center</label>
            </value>
            <value>
                <fullName>event_table</fullName>
                <label>Event / Table</label>
            </value>
            <value>
                <fullName>website</fullName>
                <label>Website</label>
            </value>
            <value>
                <fullName>blog</fullName>
                <label>Blog</label>
            </value>
            <value>
                <fullName>coalition_partner</fullName>
                <label>Coalition Partner</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>