force-app/main/default/objects/OutreachSourceCode/listViews/FQS_Active_Outreach_Codes.listView-meta.xml
<ListView>
    <fullName>FQS_Active_Outreach_Codes</fullName>
    <columns>Name</columns>
    <columns>SourceCode</columns>
    <columns>MessageChannel</columns>
    <columns>Campaign</columns>
    <columns>AudienceCount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>FQS Active Outreach Codes</label>
</ListView>