force-app/main/default/objects/OutreachSourceCode/listViews/FQS_Digital_Codes.listView-meta.xml
<ListView>
    <fullName>FQS_Digital_Codes</fullName>
    <columns>Name</columns>
    <columns>SourceCode</columns>
    <columns>Status</columns>
    <columns>Campaign</columns>
    <columns>AudienceCount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessageChannel</field>
        <operation>equals</operation>
        <value>Digital Paid</value>
    </filters>
    <filters>
        <field>MessageChannel</field>
        <operation>equals</operation>
        <value>Social Paid</value>
    </filters>
    <booleanFilter>1 OR 2</booleanFilter>
    <label>Digital Codes</label>
</ListView>