force-app/main/default/objects/OutreachSourceCode/listViews/FQS_Direct_Mail_Codes.listView-meta.xml
<ListView>
    <fullName>FQS_Direct_Mail_Codes</fullName>
    <columns>Name</columns>
    <columns>SourceCode</columns>
    <columns>Status</columns>
    <columns>Campaign</columns>
    <columns>AudienceCount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessageChannel</field>
        <operation>equals</operation>
        <value>Direct Mail</value>
    </filters>
    <label>FQS Direct Mail Codes</label>
</ListView>